--- a/index.html
+++ b/index.html
@@ -3,11 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
-    <div style="width: 800px; height: 600px;">
+    <header>
+        <div>Space friction</div>
+    </header>
+    <div class="game">
         <div id="fs-container" style="position: relative; overflow:hidden; width: 100%; height: 100%">
             <canvas id="lumagl-canvas" width="800" height="600" style="width: 100%; height: 100%;"></canvas>
+        </div>
+    </div>
+
+    <div class="controls">
+        <div class="key-block">
+            <div class="key">W</div>
+            <div class="description">Forward</div>
+        </div>
+        <div class="key-block">
+            <div class="key">A</div>
+            <div class="description">Left | Turn left</div>
+        </div>
+        <div class="key-block">
+            <div class="key">S</div>
+            <div class="description">Backward</div>
+        </div>
+        <div class="key-block">
+            <div class="key">D</div>
+            <div class="description">Right | Turn right</div>
+        </div>
+        <div class="key-block">
+            <div class="key">Q</div>
+            <div class="description">Roll ccw</div>
+        </div>
+        <div class="key-block">
+            <div class="key">E</div>
+            <div class="description">Roll cw</div>
+        </div>
+        <div class="key-block">
+            <div class="key">C</div>
+            <div class="description">Down | Picth down</div>
+        </div>
+        <div class="key-block">
+            <div class="key">Z</div>
+            <div class="description">Up | Pitch up</div>
+        </div>
+        <div class="key-block">
+            <div class="key">X</div>
+            <div class="description">Norm camera + Stop ship</div>
+        </div>
+        <div class="key-block">
+            <div class="key">V</div>
+            <div class="description">Ship camera | Free camera</div>
+        </div>
+        <div class="key-block">
+            <div class="key">F</div>
+            <div class="description">FPS counter</div>
+        </div>
+        <div class="key-block">
+            <div class="key">P</div>
+            <div class="description">Debug objects</div>
+        </div>
+        <div class="key-block">
+            <div class="key">L</div>
+            <div class="description">Camera light</div>
         </div>
     </div>
 </body>
